--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,35 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
-    branches: ['*']
+    branches:
+      - '**'
   pull_request:
-    branches: ['*']
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm run test
-
   build-and-push:
-    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
 
+    env:
+      IMAGE_TAG: ''  # Declared for schema validation in VS Code
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Extract and sanitize branch name
+        run: |
+          BRANCH_NAME="${GITHUB_REF##*/}"
+          SANITIZED_BRANCH=$(echo "$BRANCH_NAME" | tr '/' '-' | tr '[:upper:]' '[:lower:]')
+          echo "IMAGE_TAG=$SANITIZED_BRANCH" >> $GITHUB_ENV
+
+      - name: Debug image tag
+        run: |
+          echo "Sanitized image tag: $IMAGE_TAG"
+          
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -44,8 +39,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/nestjs-mongo-api:latest .
+          docker build -t ghcr.io/${{ github.repository_owner }}/nestjs-mongo-api:${{ env.IMAGE_TAG }} .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/nestjs-mongo-api:latest
+          docker push ghcr.io/${{ github.repository_owner }}/nestjs-mongo-api:${{ env.IMAGE_TAG }}
